--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   pin_code_fields: ^7.3.0
   sleek_circular_slider: ^2.0.1
   image_picker: ^0.8.4+10
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
