--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^3.3.8
   pin_code_fields: ^7.3.0
   sleek_circular_slider: ^2.0.1
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
