--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   image_picker: ^0.8.4+10
   carousel_slider: ^4.0.0
+  buttons_tabbar: ^1.3.3
 
 dev_dependencies:
   flutter_test:
