--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   image_picker: ^0.8.4+10
   carousel_slider: ^4.0.0
   buttons_tabbar: ^1.3.3
+  flutter_widget_from_html_core: ^0.8.5+1
+  readmore: ^2.1.0
+  video_player: ^2.3.0
+  chewie: ^1.3.1
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
