--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   video_player: ^2.3.0
   chewie: ^1.3.1
   youtube_player_flutter: ^8.0.0
+  share_plus: ^4.0.3
 
 dev_dependencies:
   flutter_test:
