--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   chewie: ^1.3.1
   youtube_player_flutter: ^8.0.0
   share_plus: ^4.0.3
+  rive: 0.8.4
 
 dev_dependencies:
   flutter_test:
