--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,13 @@ dependencies:
   image_picker: ^0.8.4+11
   carousel_slider: ^4.0.0
   buttons_tabbar: ^1.3.4
-  flutter_widget_from_html_core: ^0.8.5+1
   readmore: ^2.1.0
   video_player: ^2.3.0
   chewie: ^1.3.1
   youtube_player_flutter: ^8.0.0
   share_plus: ^4.0.3
   rive: 0.8.4
+  flutter_html: ^3.0.0-alpha.3
 
 dev_dependencies:
   flutter_test:
