--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=pass123
-keyPassword=pass123
+storePassword=PassPass
+keyPassword=PassPass
 keyAlias=upload
 storeFile=keys/hayah_karima_key.jks
