--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   rive: 0.8.4
   flutter_html: ^3.0.0-alpha.3
   shimmer: ^2.0.0
+  get_cli: ^1.7.1
 
 dev_dependencies:
   flutter_test:
@@ -56,3 +57,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+
+  fonts:
+    - family: MyCustomIcons
+      fonts:
+        - asset: assets/fonts/icons_font/MyCustomIcons.ttf
