--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   rive: 0.8.4
   flutter_html: ^3.0.0-alpha.3
   shimmer: ^2.0.0
+  flutter_screenutil: ^5.5.3+2
 
 dev_dependencies:
   flutter_test:
