--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_html: ^3.0.0-alpha.3
   shimmer: ^2.0.0
   flutter_screenutil: ^5.5.3+2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
