--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: hayah_karema
 description: Hayah Karema Mobile App
 version: 1.0.6+6
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -19,13 +19,11 @@ dependencies:
   form_field_validator: ^1.1.0
   intl: ^0.17.0
   url_launcher: ^6.0.20
-  google_fonts: ^2.3.1
+  google_fonts: ^3.0.1
   barbecue: ^0.4.0
   ansicolor: ^2.0.1
   progress_indicators: ^1.0.0
   dotted_border: ^2.0.0+2
-  firebase_core: ^1.13.1
-  firebase_auth: ^3.3.8
   pin_code_fields: ^7.3.0
   sleek_circular_slider: ^2.0.1
   image_picker: ^0.8.4+11
@@ -36,16 +34,15 @@ dependencies:
   chewie: ^1.3.1
   youtube_player_flutter: ^8.0.0
   share_plus: ^4.0.3
-  rive: 0.8.4
+  rive: ^0.9.0
   flutter_html: ^3.0.0-alpha.3
-  shimmer: ^2.0.0
   flutter_screenutil: ^5.5.3+2
   flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.9.2
 
 flutter_icons:
