--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   flutter_html: ^3.0.0-alpha.3
   flutter_screenutil: ^5.5.3+2
   flutter_rating_bar: ^4.0.1
+  firebase_core: ^1.19.2
+  firebase_auth: ^3.4.2
+  google_sign_in: ^5.4.0
+  flutter_facebook_auth: ^4.4.0+1
 
 dev_dependencies:
   flutter_test:
