--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^3.4.2
   google_sign_in: ^5.4.0
   flutter_facebook_auth: ^4.4.0+1
+  audioplayers: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/audio/
 
   fonts:
     - family: MyCustomIcons
